--- a/cda.html
+++ b/cda.html
@@ -161,39 +161,23 @@
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
-                        <div class="lg:col-span-2">
-                            <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
-                                <div class="flex flex-wrap md:flex-nowrap items-start">
-                                    <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
-                                        <img src="images/charge-daffairs.jpg" alt="CDA A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
-                                        <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">CDA A.I Mrs. Mrs. Sarah Bukar-Godwin</h3>
-                                        <p class="text-gray-600">Charge D' Affairs' of the Federal Republic of Nigeria to the Czech Republic</p>
-                                    </div>
-                                    <div class="w-full md:w-2/3 prose max-w-none text-gray-700 space-y-4">
-                                        <h2 class="font-heading text-3xl nigeria-green">A Warm Welcome</h2>
-                                        <p>On behalf of His Excellency, Bola Ahmed Tinubu, GCFR, President of the Federal Republic of Nigeria, and the entire staff of the Embassy, it is my distinct honor to welcome you to the official website of the Embassy of Nigeria in Prague, Czech Republic.</p>
-                                        <p>This website is designed to serve as a vital resource for Nigerian citizens, our Czech friends, and the international community. Here, you will find comprehensive information about our consular services, discover the rich cultural heritage and vast investment opportunities in Nigeria, and stay updated on the latest news and events related to our Mission.</p>
-                                        <p>Our primary objective is to strengthen the excellent bilateral relations that exist between Nigeria and the Czech Republic. We are committed to fostering deeper ties in trade, investment, culture, and education, while diligently serving the needs of the Nigerian diaspora in this beautiful country.</p>
-                                        <p>We strive to provide efficient and courteous consular services. Whether you are applying for a visa, seeking information on passport services, or require any other form of assistance, our dedicated team is here to help. This platform is part of our ongoing effort to make our services more accessible and user-friendly.</p>
-                                        <p>I invite you to explore the website and discover the vibrant spirit of Nigeria. We value your feedback and suggestions on how we can improve our services and this digital platform. We look forward to engaging with you.</p>
-                                        <p>Thank you for visiting.</p>
-                                    </div>
-                                </div>
+                     <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg max-w-4xl mx-auto">
+                        <div class="flex flex-wrap md:flex-nowrap items-start">
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
+                                <img src="images/charge-daffairs.jpg" alt="CDA A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                                <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">CDA A.I Mrs. Sarah Bukar-Godwin</h3>
+                                <p class="text-gray-600">Charge D' Affairs of the Federal Republic of Nigeria to the Czech Republic</p>
+                            </div>
+                            <div class="w-full md:w-2/3 prose max-w-none text-gray-700 space-y-4">
+                                <h2 class="font-heading text-3xl nigeria-green">A Warm Welcome</h2>
+                                <p>On behalf of His Excellency, Bola Ahmed Tinubu, GCFR, President of the Federal Republic of Nigeria, and the entire staff of the Embassy, it is my distinct honor to welcome you to the official website of the Embassy of Nigeria in Prague, Czech Republic.</p>
+                                <p>This website is designed to serve as a vital resource for Nigerian citizens, our Czech friends, and the international community. Here, you will find comprehensive information about our consular services, discover the rich cultural heritage and vast investment opportunities in Nigeria, and stay updated on the latest news and events related to our Mission.</p>
+                                <p>Our primary objective is to strengthen the excellent bilateral relations that exist between Nigeria and the Czech Republic. We are committed to fostering deeper ties in trade, investment, culture, and education, while diligently serving the needs of the Nigerian diaspora in this beautiful country.</p>
+                                <p>We strive to provide efficient and courteous consular services. Whether you are applying for a visa, seeking information on passport services, or require any other form of assistance, our dedicated team is here to help. This platform is part of our ongoing effort to make our services more accessible and user-friendly.</p>
+                                <p>I invite you to explore the website and discover the vibrant spirit of Nigeria. We value your feedback and suggestions on how we can improve our services and this digital platform. We look forward to engaging with you.</p>
+                                <p>Thank you for visiting.</p>
                             </div>
                         </div>
-                        <!-- Sidebar -->
-                        <aside class="lg:col-span-1">
-                            <div class="bg-white p-6 rounded-lg shadow-lg">
-                                <h3 class="font-heading text-xl font-bold mb-4 border-b pb-2">Useful Links</h3>
-                                <ul class="space-y-3 text-gray-700">
-                                    <li><a href="visas.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-passport mr-2"></i>Apply for a Nigerian Visa</a></li>
-                                    <li><a href="etc.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-plane-departure mr-2"></i>Emergency Travel Documents</a></li>
-                                    <li><a href="https://www.immigration.gov.ng/" target="_blank" class="hover:text-nigeria-green hover:underline"><i class="fas fa-link mr-2"></i>Nigeria Immigration Service</a></li>
-                                    <li><a href="news.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-calendar-alt mr-2"></i>Public Holidays Schedule</a></li>
-                                </ul>
-                            </div>
-                        </aside>
                     </div>
                 </div>
             </section>
