--- a/gallery.html
+++ b/gallery.html
@@ -101,7 +101,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="cda.html">Charge D' Affairs' Welcome</a>
+                            <a href="ambassador.html">Ambassador's Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -171,49 +171,27 @@
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                        <!-- Gallery Item 1 -->
-                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden card-lift-effect">
-                            <img src="images/gallery-1.jpg" alt="Gallery Image 1" class="w-full h-72 object-cover">
-                            <div class="overlay absolute inset-0 bg-black bg-opacity-50 flex items-end p-6">
-                                <p class="text-white font-semibold">Independence Day Celebration 2025</p>
-                            </div>
-                        </div>
-                        <!-- Gallery Item 2 -->
-                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden card-lift-effect">
-                            <img src="images/gallery-2.jpg" alt="Gallery Image 2" class="w-full h-72 object-cover">
-                            <div class="overlay absolute inset-0 bg-black bg-opacity-50 flex items-end p-6">
-                                <p class="text-white font-semibold">Ambassador presenting credentials</p>
-                            </div>
-                        </div>
-                        <!-- Gallery Item 3 -->
-                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden card-lift-effect">
-                            <img src="images/gallery-3.jpg" alt="Gallery Image 3" class="w-full h-72 object-cover">
-                            <div class="overlay absolute inset-0 bg-black bg-opacity-50 flex items-end p-6">
-                                <p class="text-white font-semibold">Nigeria-Czech Business Forum</p>
-                            </div>
-                        </div>
-                        <!-- Gallery Item 4 -->
-                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden card-lift-effect">
-                            <img src="images/gallery-4.jpg" alt="Gallery Image 4" class="w-full h-72 object-cover">
-                            <div class="overlay absolute inset-0 bg-black bg-opacity-50 flex items-end p-6">
-                                <p class="text-white font-semibold">Cultural Dance Troupe Performance</p>
-                            </div>
-                        </div>
-                        <!-- Gallery Item 5 -->
-                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden card-lift-effect">
-                            <img src="images/gallery-5.jpg" alt="Gallery Image 5" class="w-full h-72 object-cover">
-                            <div class="overlay absolute inset-0 bg-black bg-opacity-50 flex items-end p-6">
-                                <p class="text-white font-semibold">Meeting with Nigerian Community Leaders</p>
-                            </div>
-                        </div>
-                        <!-- Gallery Item 6 -->
-                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden card-lift-effect">
-                            <img src="images/gallery-6.jpg" alt="Gallery Image 6" class="w-full h-72 object-cover">
-                            <div class="overlay absolute inset-0 bg-black bg-opacity-50 flex items-end p-6">
-                                <p class="text-white font-semibold">Embassy Staff at a Charity Event</p>
-                            </div>
-                        </div>
+                    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-1.jpg" alt="Gallery Image 1" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 1</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-2.jpg" alt="Gallery Image 2" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 2</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-3.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 3</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-4.jpg" alt="Gallery Image 4" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 4</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-5.jpg" alt="Gallery Image 5" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 5</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-6.jpg" alt="Gallery Image 6" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 6</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-7.jpg" alt="Gallery Image 7" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 7</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-8.jpg" alt="Gallery Image 8" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 8</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-9.jpg" alt="Gallery Image 9" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 9</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-10.jpg" alt="Gallery Image 10" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 10</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-11.jpg" alt="Gallery Image 11" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 11</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-12.jpg" alt="Gallery Image 12" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 12</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-13.jpg" alt="Gallery Image 13" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 13</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-14.jpg" alt="Gallery Image 14" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 14</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-15.jpg" alt="Gallery Image 15" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 15</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-16.jpg" alt="Gallery Image 16" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 16</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-17.jpg" alt="Gallery Image 17" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 17</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-18.jpg" alt="Gallery Image 18" class="w-full h-60 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 18</p></div></div>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-19.jpg" alt="Gallery Image 19" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 19</p></div></a>
+                        <div class="gallery-item relative rounded-lg shadow-lg overflow-hidden group card-lift-effect"><img src="images/gallery-20.jpg" alt="Gallery Image 20" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption Placeholder 20</p></div></a>
                     </div>
                 </div>
             </section>
@@ -243,8 +221,13 @@
     </footer>
     
     <script>
+        // Function to scroll to top on page load/refresh
+        window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+        }
+
         document.addEventListener('DOMContentLoaded', function () {
-            // JS for menus and translation
+            // JS for menus and live clock
             function updateTime() {
                 const timeEl = document.getElementById('prague-time');
                 if (timeEl) {
@@ -255,7 +238,7 @@
             }
             updateTime();
             setInterval(updateTime, 1000 * 60);
-            
+
             const dropdownToggles = document.querySelectorAll('.dropdown-toggle');
             dropdownToggles.forEach(toggle => {
                 toggle.addEventListener('click', function(event) {
@@ -306,6 +289,7 @@
                 }
             });
 
+            // Translate button logic
             const translateLink = document.getElementById('translate-link');
             if(translateLink) {
                 const currentPageUrl = window.location.href;
