--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 font-heading">Explore Our Mission</h2>
                     <div class="max-w-6xl mx-auto bg-black rounded-lg shadow-xl overflow-hidden">
                         <video class="w-full" controls autoplay muted loop>
-                            <source src="videos/embassy-promo.mp4" type="video/mp4">
+                            <source src="video/embassy-promo.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
