--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center">
             <div class="hero-slide active" style="background-image: url('images/hero-background-1.jpg');"></div>
             <div class="hero-slide" style="background-image: url('images/hero-background-2.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-3.png');"></div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight font-heading">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
@@ -234,7 +234,7 @@
             <section class="py-20">
                 <div class="container mx-auto px-6 text-center">
                     <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 font-heading">Explore Our Mission</h2>
-                    <div class="max-w-5xl mx-auto bg-black rounded-lg shadow-xl overflow-hidden">
+                    <div class="max-w-4xl mx-auto bg-black rounded-lg shadow-xl overflow-hidden">
                         <video class="w-full" controls autoplay muted loop>
                             <source src="video/embassy-promo.mp4" type="video/mp4">
                             Your browser does not support the video tag.
@@ -305,7 +305,7 @@
                 </div>
             </section>
 
-             
+            
              <!-- Discover Nigeria Section -->
             <section class="py-20">
                 <div class="container mx-auto px-6 text-center">
