--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <!-- Video Section -->
             <section class="py-20">
                 <div class="container mx-auto px-6 text-center">
-                    <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 font-heading">Explore Our Mission</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 font-heading">Embassy Tour</h2>
                     <div class="max-w-4xl mx-auto bg-black rounded-lg shadow-xl overflow-hidden">
                         <video class="w-full" controls autoplay muted loop>
                             <source src="video/embassy-promo.mp4" type="video/mp4">
