--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center">
             <div class="hero-slide active" style="background-image: url('images/hero-background-1.jpg');"></div>
             <div class="hero-slide" style="background-image: url('images/hero-background-2.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-3.png');"></div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight font-heading">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
@@ -329,7 +329,7 @@
                 <div>
                     <h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4>
                     <ul class="text-sm space-y-2">
-                        <li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li>
+                        <li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 2:00 PM</li>
                         <li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li>
                     </ul>
                 </div>
