--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         <div class="lg:col-span-2 space-y-12">
                             <!-- Video Section -->
                             <div class="bg-white p-8 rounded-lg shadow-lg">
-                                <h2 class="text-3xl font-bold section-title inline-block mb-6 relative pb-2 font-heading text-center w-full">Explore Our Mission</h2>
+                                <h2 class="text-3xl font-bold section-title inline-block mb-6 relative pb-2 font-heading text-center w-full">Embassy Tour</h2>
                                 <div class="max-w-full mx-auto bg-black rounded-lg shadow-xl overflow-hidden">
                                     <video class="w-full" controls autoplay muted loop>
                                         <source src="video/embassy-promo.mp4" type="video/mp4">
