--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             
             <!-- Call to Action Section -->
             <section class="relative py-20 text-white fade-in-section">
-                <div class="absolute inset-0 bg-cover bg-center bg-fixed" style="background-image: url('images/cta-background.jpg');"></div>
+                <div class="absolute inset-0 bg-cover bg-center bg-fixed" style="background-image: url('images/cta-background.png');"></div>
                 <div class="absolute inset-0 bg-green-900 opacity-80"></div>
                 <div class="container mx-auto px-6 relative z-10 text-center">
                     <h2 class="text-4xl font-bold font-heading">Doing Business with Nigeria?</h2>
